update: docker-compose.yml added