@@ -1,5 +1,5 @@
 FROM gradle AS build
-COPY --chown=gradle:gradle ./api /home/gradle/src
+COPY ./api /home/gradle/src
 WORKDIR /home/gradle/src
 RUN gradle build
 
@@ -7,4 +7,4 @@ FROM openjdk
 EXPOSE 4280
 COPY --from=build /home/gradle/src/build/libs/DeXPortalAPI-0.0.1-SNAPSHOT.jar /app/
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/DeXPortalAPI-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-jar", "/app/DeXPortalAPI-0.0.1-SNAPSHOT.jar"]
